Wed May 24 14:36:42 2006  Søren Sandmann  <sandmann@redhat.com>

	* src/c-window.c (meta_comp_window_{freeze,thaw}_stack: Add a
	stack-freeze feature to CWindow.

	* src/c-screen.c (meta_comp_screen_restack): Don't restack if the
	window is frozen.

Wed May 24 13:09:49 2006  Søren Sandmann  <sandmann@redhat.com>

	* src/c-window.c: Fix compilation in the non-composited case.

Wed May 24 12:57:32 2006  Søren Sandmann  <sandmann@redhat.com>

	* src/c-window.c (meta_comp_window_free): return TRUE when the
	window is actually freed.

	* src/compositor.c (do_effect): Disable updating before exploding
	the window.

	* src/c-window.c: Make MetaCompWindow refcounted.

	* src/c-window.[ch]: New functions meta_comp_window_{show,hide}

	* src/c-screen.c (meta_comp_screen_unmap): Call
	meta_comp_window_hide() instead of directly setting the viewable
	status of the node.

	* src/c-screen.c (meta_comp_screen_remove_window): Only remove the
	window when it is actually freed.

Wed May 24 12:45:21 2006  Søren Sandmann  <sandmann@redhat.com>

	* src/c-screen.c: Delete unused meta_comp_screen_hide_window().

2006-05-23  Adam Jackson  <ajax@freedesktop.org>

	* src/c-window.c:
	* src/c-window.h:
	* src/compositor.c:
	* src/effects.c:
	* src/effects.h:
	* src/window.c:
	Move shrink effect code from compositor.c to c-window.c.  Stubs for
	restore effect.  Notes in various places for where to hook in
	other effects.

Tue May 23 16:36:04 2006  Søren Sandmann  <sandmann@redhat.com>

	* src/compositor.c (do_effect): Also use explode when windows close.

	* src/c-window.c (meta_comp_window_explode): Add refcounting to
	comp window, and use it in the explosion effect

	* src/effects.h (struct MetaEffect): Add new MetaCloseEffect.

	* src/display.c (event_callback): Run it from the UnmapNotify
	event handler.

Tue May 23 15:23:58 2006  Søren Sandmann  <sandmann@redhat.com>

	* src/c-window.c (send_sync_request): New function to send a sync
	request to newly mapped windows.