@@ -1,3 +1,14 @@
+Wed May 24 16:37:11 2006  Søren Sandmann  <sandmann@redhat.com>
+
+	* src/c-window.c (private_metacity_window): New function
+
+	* src/c-window.c (meta_comp_window_refresh_attrs): Map metacity's
+	own windows directly.
+
+Wed May 24 16:35:54 2006  Søren Sandmann  <sandmann@redhat.com>
+
+	* src/c-window.c (private_metacity_window): 
+
 Wed May 24 14:36:42 2006  Søren Sandmann  <sandmann@redhat.com>
 
 	* src/c-window.c (meta_comp_window_{freeze,thaw}_stack: Add a
